# Kokoro-mac

./: .gitignore  AGENTS.md  Makefile  README.md  install_global_speak.sh  pyproject.toml  setup_shell_alias.sh
.claude/: settings.local.json
scripts/: prefetch_kokoro.py
src/speak_cli/: cli.py
