[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kokoro-speak-demo"
version = "0.1.0"
description = "Minimal CLI to synthesize speech with Kokoro on Apple Silicon (CPU)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kokoro Contributors" }]
dependencies = [
  "kokoro>=0.9.4",
  "numpy>=1.23",
]

[project.scripts]
speak = "speak_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
